src/test/ui/feature-gates/feature-gate-default_type_parameter_fallback.stderr
error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions.
  --> $DIR/feature-gate-default_type_parameter_fallback.rs:3:8
   |
LL | fn avg<T=i32>(_: T) {}
   |        ^

error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions.
  --> $DIR/feature-gate-default_type_parameter_fallback.rs:8:6
   |
LL | impl<T=i32> S<T> {}
   |      ^

error: aborting due to 2 previous errors

